--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -176,6 +176,9 @@
     <ClCompile Include="src\typeinfo\msrtti.cpp" />
     <ClCompile Include="src\patches\window.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Amplifier Results - skyrim64_test\My Amplifier Results - skyrim64_test.amplxeproj" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
