--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -104,11 +104,12 @@
     <ClInclude Include="imgui\stb_rect_pack.h" />
     <ClInclude Include="imgui\stb_textedit.h" />
     <ClInclude Include="imgui\stb_truetype.h" />
-    <ClInclude Include="src\imgui_impl_dx11.h" />
+    <ClInclude Include="src\ui\imgui_impl_dx11.h" />
     <ClInclude Include="src\patches\TES\MemoryManager.h" />
     <ClInclude Include="src\patches\TES\BSReadWriteLock.h" />
     <ClInclude Include="src\stdafx.h" />
     <ClInclude Include="src\patches\TES\TESForm.h" />
+    <ClInclude Include="src\ui\ui.h" />
     <ClInclude Include="src\vfs\vfs.h" />
     <ClInclude Include="src\vfs\vfs_hook.h" />
     <ClInclude Include="src\vfs\vfs_util.h" />
@@ -158,13 +159,14 @@
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
-    <ClCompile Include="src\imgui_impl_dx11.cpp" />
+    <ClCompile Include="src\ui\imgui_impl_dx11.cpp" />
     <ClCompile Include="src\patches\TES\MemoryManager.cpp" />
     <ClCompile Include="src\patches\TES\BSReadWriteLock.cpp" />
     <ClCompile Include="src\patches\settings.cpp" />
     <ClCompile Include="src\stdafx.cpp" />
     <ClCompile Include="src\patches\TES\TESForm.cpp" />
     <ClCompile Include="src\patches\threading.cpp" />
+    <ClCompile Include="src\ui\ui.cpp" />
     <ClCompile Include="src\vfs\vfs.cpp" />
     <ClCompile Include="src\vfs\vfs_hook.cpp" />
     <ClCompile Include="src\vfs\vfs_util.cpp" />
