Add functions for getting BSShader constant names and sizes

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <ClInclude Include="src\patches\patches.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsRenderTargetManager.h" />
+    <ClInclude Include="src\patches\TES\BSShaderManager.h" />
     <ClInclude Include="src\patches\TES\BSThread_Win32.h" />
     <ClInclude Include="src\patches\TES\BSTScatterTable.h" />
     <ClInclude Include="src\profiler_internal.h" />
