--- a/skyrim64_test/skyrim64_test.vcxproj.filters
+++ b/skyrim64_test/skyrim64_test.vcxproj.filters
@@ -295,5 +295,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="My Amplifier Results - skyrim64_test\My Amplifier Results - skyrim64_test.amplxeproj" />
+    <None Include="src\patches\TES\BSShaderConstants.inl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
