Add Xbyak dependency

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -118,6 +118,10 @@
     <ClInclude Include="src\vfs\vfs_hook.h" />
     <ClInclude Include="src\vfs\vfs_util.h" />
     <ClInclude Include="src\xutil.h" />
+    <ClInclude Include="xbyak\xbyak.h" />
+    <ClInclude Include="xbyak\xbyak_bin2hex.h" />
+    <ClInclude Include="xbyak\xbyak_mnemonic.h" />
+    <ClInclude Include="xbyak\xbyak_util.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="jemalloc\arena.c" />
