--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="src\patches\TES\BSShaderManager.h" />
     <ClInclude Include="src\patches\TES\BSShaderProperty.h" />
     <ClInclude Include="src\patches\TES\BSShaderRenderTargets.h" />
+    <ClInclude Include="src\patches\TES\BSSpinLock.h" />
     <ClInclude Include="src\patches\TES\BSThread_Win32.h" />
     <ClInclude Include="src\patches\TES\BSTScatterTable.h" />
     <ClInclude Include="src\profiler_internal.h" />
@@ -172,6 +173,7 @@
     <ClCompile Include="src\patches\TES\BSGraphicsRenderTargetManager.cpp" />
     <ClCompile Include="src\patches\TES\BSShaderManager.cpp" />
     <ClCompile Include="src\patches\TES\BSShaderRenderTargets.cpp" />
+    <ClCompile Include="src\patches\TES\BSSpinLock.cpp" />
     <ClCompile Include="src\patches\TES\BSThread_Win32.cpp" />
     <ClCompile Include="src\profiler.cpp" />
     <ClCompile Include="src\typeinfo\hk_typeinfo.cpp" />
