--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="src\patches\TES\BSSpinLock.h" />
     <ClInclude Include="src\patches\TES\BSThread_Win32.h" />
     <ClInclude Include="src\patches\TES\BSTScatterTable.h" />
+    <ClInclude Include="src\patches\TES\MemoryContextTracker.h" />
     <ClInclude Include="src\profiler_internal.h" />
     <ClInclude Include="src\ansel.h" />
     <ClInclude Include="src\d3dconv.h" />
