--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -91,7 +91,9 @@
     <ClInclude Include="src\patches\rendering\codegen.h" />
     <ClInclude Include="src\patches\rendering\common.h" />
     <ClInclude Include="src\patches\rendering\d3d11_tls.h" />
+    <ClInclude Include="src\patches\TES\BSBatchRenderer.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsRenderTargetManager.h" />
+    <ClInclude Include="src\patches\TES\BSShaderAccumulator.h" />
     <ClInclude Include="src\patches\TES\BSShaderManager.h" />
     <ClInclude Include="src\patches\TES\BSShaderProperty.h" />
     <ClInclude Include="src\patches\TES\BSShaderRenderTargets.h" />
@@ -171,7 +173,9 @@
     <ClCompile Include="src\patches\logging.cpp" />
     <ClCompile Include="src\patches\rendering\d3d11_tls.cpp" />
     <ClCompile Include="src\patches\steam.cpp" />
+    <ClCompile Include="src\patches\TES\BSBatchRenderer.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphicsRenderTargetManager.cpp" />
+    <ClCompile Include="src\patches\TES\BSShaderAccumulator.cpp" />
     <ClCompile Include="src\patches\TES\BSShaderManager.cpp" />
     <ClCompile Include="src\patches\TES\BSShaderRenderTargets.cpp" />
     <ClCompile Include="src\patches\TES\BSSpinLock.cpp" />
