Refactor BSShader* to relevant files

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -92,15 +92,23 @@
     <ClInclude Include="src\patches\rendering\common.h" />
     <ClInclude Include="src\patches\rendering\d3d11_tls.h" />
     <ClInclude Include="src\patches\TES\BSBatchRenderer.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSComputeShader.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSPixelShader.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSVertexShader.h" />
+    <ClInclude Include="src\patches\TES\BSShader\Shaders\BSBloodSplatterShader.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsRenderTargetManager.h" />
-    <ClInclude Include="src\patches\TES\BSShaderAccumulator.h" />
-    <ClInclude Include="src\patches\TES\BSShaderManager.h" />
-    <ClInclude Include="src\patches\TES\BSShaderProperty.h" />
-    <ClInclude Include="src\patches\TES\BSShaderRenderTargets.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSShader.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSShaderAccumulator.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSShaderManager.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSShaderProperty.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSShaderRenderTargets.h" />
     <ClInclude Include="src\patches\TES\BSSpinLock.h" />
+    <ClInclude Include="src\patches\TES\BSTArray.h" />
     <ClInclude Include="src\patches\TES\BSThread_Win32.h" />
     <ClInclude Include="src\patches\TES\BSTScatterTable.h" />
     <ClInclude Include="src\patches\TES\MemoryContextTracker.h" />
+    <ClInclude Include="src\patches\TES\NiObject.h" />
+    <ClInclude Include="src\patches\TES\NiRefObject.h" />
     <ClInclude Include="src\profiler_internal.h" />
     <ClInclude Include="src\ansel.h" />
     <ClInclude Include="src\d3dconv.h" />
@@ -174,10 +182,14 @@
     <ClCompile Include="src\patches\rendering\d3d11_tls.cpp" />
     <ClCompile Include="src\patches\steam.cpp" />
     <ClCompile Include="src\patches\TES\BSBatchRenderer.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\BSPixelShader.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\BSVertexShader.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\Shaders\BSBloodSplatterShader.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphicsRenderTargetManager.cpp" />
-    <ClCompile Include="src\patches\TES\BSShaderAccumulator.cpp" />
-    <ClCompile Include="src\patches\TES\BSShaderManager.cpp" />
-    <ClCompile Include="src\patches\TES\BSShaderRenderTargets.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\BSShader.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\BSShaderAccumulator.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\BSShaderManager.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\BSShaderRenderTargets.cpp" />
     <ClCompile Include="src\patches\TES\BSSpinLock.cpp" />
     <ClCompile Include="src\patches\TES\BSThread_Win32.cpp" />
     <ClCompile Include="src\profiler.cpp" />
@@ -214,7 +226,7 @@
     <None Include="My Amplifier Results - skyrim64_test\My Amplifier Results - skyrim64_test.amplxeproj" />
     <None Include="src\patches\rendering\d3d11_tls_patchlist.inl" />
     <None Include="src\patches\rendering\d3d11_tls_xreflist.inl" />
-    <None Include="src\patches\TES\BSShaderConstants.inl" />
+    <None Include="src\patches\TES\BSShader\BSShaderConstants.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
